10/26/17 v16a - More cleanup and a few tests for the persistent storage system. \n
10/25/17 v16 - Massive backend changes to how all population data is stored and move around. Fixes using the table, allows the simulation to run offline, save/load system is much more functional and other backend cleanup. \n
10/23/17 v15 - Many ui improvements: reset button, default parameters button, rerunable simulations, populations in save files, and many bugfixes. \n
9/19/17 v14 - Save load system is working and includes several image outputs. Also start of output page. \n
9/17/17 v13 - Added basic save load system and faster way of drawing heatmap outputs. \n
9/4/17 v12a - Parameters entered in the settings and advanced settings screens are actually used now. \n
9/4/17 v12 - First version that somewhat works. Parameters are placeholder but population input is fully working. \n
9/2/17 v11 - Continue work on ui integration. Simulator is almost runnable but more table, map, simmulator data synchronization code is necessary. \n
8/28/17 v10 - Started working on integrating the modeling code into the user interface. \n
8/6/17 v9b - Added popup for finishing the population setup of a popution added through the mapview. Currently testable through the table view page. \n
8/4/17 v9a - Table can now be navigated with arrow keys, tab, and shift+tab as well as return. \n
8/4/17 v9 - Added dynamic javascript table for population entry. \n
8/2/17 v8 - Finished parameter user interface. \n
8/1/17 v7 - Started writing user interface to hook up to backend simulator. \n
6/22/17 v6 - Minor changes to sidebar usage, started formatting the getting started page. \n
6/19/17 v5 - Cosmetic upgrades, start of population interface, cleaned up some javascript. \n
6/18/17 v4 - Added background page and started to include badges to show form completion. \n
6/16/17 v3 - Side bar works, added tabbed interface and changelog fade. \n