@@ -45,10 +45,10 @@
                                                 <div class="col s3"><a class="waves-effect waves-light btn red darken-2 hide" id="resetButton" onclick="resetSimulation()">
                                                         Reset Simulation
                                                 </a></div>
-                                                <div class="col s3"><a class="waves-effect waves-light btn" id="newSimButton" onclick="newSimulation()">
+                                                <div class="col s3" id="newSimButton"><a class="waves-effect waves-light btn" onclick="newSimulation()">
                                                         New Simulation
                                                 </a></div>
-                                                <div class="col s3 hide"><a class="waves-effect waves-light btn" id="continueSimButton" onclick="changeTab('getStarted');">
+                                                        <div class="col s3 hide" id="continueSimButton"><a class="waves-effect waves-light btn" onclick="changeTab('parameterSetup');">
                                                         Continue
                                                 </a></div>
                                         </div>
@@ -432,6 +432,19 @@
                         </div>
                         <div class="col s2">
                                 <a class="waves-effect waves-light btn" onclick="closePopUpdater(2);">Update</a>
+                        </div>
+                </div>
+        </div>
+
+        <div class="notification scale-transition scale-out" id="notificationContainer">
+                <div class="row">
+                        <div class="col s12">
+                                <div class="card blue-grey darken-1">
+                                        <div class="card-content white-text">
+                                                <strong> Notification: </strong>
+                                                <div id="notificationText"></div>
+                                        </div>
+                                </div>
                         </div>
                 </div>
         </div>
