@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# manifest v4
+# manifest v5
 
 CACHE:
 index.html
